# twatter

./: .env.example  .gitignore  Cargo.toml  README.md  dev.sh  prod.sh
api/: .env.example  Cargo.toml
api/src/: main.rs  state.rs
api/src/database/: queries.rs
api/src/router/: mod.rs
api/src/router/posts/: create.rs  mod.rs
api/src/router/service/: mod.rs  status.rs
client/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
client/src/: api.rs  lib.rs  main.rs  router.rs  store.rs  types.rs
client/src/components/: button.rs  container.rs  create_post.rs  layout.rs  mod.rs  post.rs  posts_wall.rs  text_area.rs  title.rs
client/src/helpers/: colors.rs  flex.rs  mod.rs
client/src/routes/: home.rs
client/styles/: tailwind.css
src/: lib.rs  main.rs
src/database/: queries.rs
src/router/: create_post.rs  mod.rs
src/router/posts/: create.rs  delete.rs  get.rs  mod.rs  update.rs
src/router/service/: mod.rs
