[package]
name = "twatter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
dotenvy = "0.15.7"
eyre = "0.6.11"
tokio = { version = "1.35.0", features = ["net", "rt-multi-thread", "macros"] }
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
