[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy_macro = "0.15.7"
eyre = "0.6.11"
gloo = { version = "0.11.0", features = ["net", "console"] }
serde = { version = "1.0.193", features = ["derive"] }
wasm-bindgen = "0.2.89"
web-sys = { version = "0.3.66", features = ["HtmlTextAreaElement"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-octicons = "0.4.0"
yew-router = "0.18.0"
yew_icons = { version = "0.8.0", features = ["lucide"] }
yewdux = "0.10.0"
